2008-09-15  Sam Steingold  <sds@gnu.org>

	* configure: fix bug #[ 2110337 ]: libsigsegv configure hints
	suggest "rm -f ${DIRNAME}/config.cache"

2008-09-15  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (*http-log-stream*): defvar
	(open-http): accept :LOG argument
	(http-proxy, open-http, get-clhs-map, get-string-map)
	(ensure-impnotes-map): use *HTTP-LOG-STREAM* for logging
	* init.lisp (*http-log-stream*): export from CUSTOM

2008-09-15  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script) [win32]: disable $? tests because
	%ERRORLEVEL% on woe32 can be reset to 0 all of a sudden
	http://article.gmane.org/gmane.lisp.clisp.devel/18967
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-09-13  Sam Steingold  <sds@gnu.org>

	* disassem.lisp (disassemble-machine-code): update for the
	2008-09-10 change: SHELL on success returns NIL

2008-09-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (HSDEFAULT): "http://www.lisp.org/HyperSpec" is dead,
	use "http://www.ai.mit.edu/projects/iiip/doc/CommonLISP/HyperSpec"
	* configure: adjust the help message

2008-09-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (SHELL) [WIN32_NATIVE]: return NIL on success and
	exitcode on failure, just like on Unix and as documented
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>
	(EXECUTE) [UNIX]: use WEXITSTATUS et al to parse status

2008-09-02  Sam Steingold  <sds@gnu.org>

	* error.d (%DEFCLCS): use symbol_tab instead of symbol_tab_data
	to support TYPECODES on 32 bit platforms
	Reported by Vladimir Tzankov <vtzankov@gmail.com>

2008-09-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use $(RUN) instead of lisp.run
	Reported by Yaroslav Kavenchuk <kavenchuk@tut.by>

2008-08-25  Bruno Haible  <bruno@clisp.org>

	* configure (SIGSEGV): Set to libsigsegv-2.6.

2008-08-24  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler_continuation): New function,
	extracted from stackoverflow_handler.